syntax = "proto3";

option csharp_namespace = "AElf.SmartContract";

import "hash.proto";
import "kernel.proto";

message Resource {
    string Name = 1;
    DataAccessMode DataAccessMode  = 2;
}

// The function meta data describes the data members of contract object.
message FunctionMetadata {
    // AElf allows one contracts to invoke others. This field record
    // which contracts are invoked by the current contract.
    repeated string SerializeCallingSet = 1;
    
    // All data members except other contracts are recorded by this field.
    repeated Resource SerializeFullResourceSet = 2;
}

message SerializedCallGraph {
    repeated GraphEdge Edges = 1;
    repeated string Vertices = 2;
}

message GraphEdge {
    string Source = 1;
    string Target = 2;
}

enum ExecutionStatus {
    Undefined = 0;
    ExecutedAndCommitted = 1;
    ExecutedButNotCommitted = 2;
    SystemError = -1;
    ContractError = -2;
    ExceededMaxCallDepth = -3;
    Canceled = -4;
}

message TransactionTrace {
    Hash TransactionId = 1;
    RetVal RetVal = 2;
    string StdOut = 3;
    string StdErr = 4;
    repeated LogEvent Logs = 5;
    repeated Transaction InlineTransactions = 6;
    repeated TransactionTrace InlineTraces = 7;
    repeated StateValueChange ValueChanges = 8;
    int64 Elapsed = 9;
    ExecutionStatus ExecutionStatus = 10;
}
